updated photos, linkedin profiles, and info

--- a/_includes/static/block-summit-main.html
+++ b/_includes/static/block-summit-main.html
@@ -92,7 +92,7 @@
           <p class="text-center" data-aos="fade-in"
           data-aos-easing="apple-easing">jointly presented by</p>
           <img
-            src="uploads/global/wms2021/wunder-wef.png"
+            src="/uploads/global/wms2021/wunder-wef.svg"
             alt=""
             class="d-block mx-auto"
             data-aos="fade-in"
@@ -269,7 +269,7 @@
             <hr />
             <p class="mb-4">
               Inspirational speakers share their knowledge in lively panel
-              discussions
+              discussions.
             </p>
             <div
               class="img-container"
@@ -487,7 +487,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-4">
           <img
             data-src="/uploads/global/wms2021/wms19/car.png"
             data-srcset="/uploads/global/wms2021/wms19/car@2x.png 2x"
@@ -505,7 +505,7 @@
             data-aos-easing="apple-easing"
           />
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
           <img
             data-src="/uploads/global/wms2021/wms19/buggy.png"
             data-srcset="/uploads/global/wms2021/wms19/buggy@2x.png 2x"
@@ -523,7 +523,7 @@
             data-aos-easing="apple-easing"
           />
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
           <img
             data-src="/uploads/global/wms2021/wms19/forum.png"
             data-srcset="/uploads/global/wms2021/wms19/forum@2x.png 2x"
