--- a/_sass/pages/_wms2021.scss
+++ b/_sass/pages/_wms2021.scss
@@ -44,6 +44,9 @@ main#wms2021-main {
     p.dates {
       font-size: 20px;
     }
+    img {
+      width: 330px;
+    }
   }
   hr {
     border-top: 1px solid white;
