--- a/_includes/static/block-summit-main.html
+++ b/_includes/static/block-summit-main.html
@@ -352,6 +352,7 @@
           >
             <h4 class="headline-medium">Not your average summit</h4>
             <a
+            target="_blank"
               href="{{ page.agenda_file }}"
               class="
                 d-flex
