--- a/_sass/pages/_wms2021.scss
+++ b/_sass/pages/_wms2021.scss
@@ -79,7 +79,7 @@ main#wms2021-main {
         max-width: 100%;
         height: 250px;
         background-size: cover;
-        background-position: center;
+        background-position: top center;
         background-repeat: no-repeat;
         position: relative;
         &.with-linkedin:after {
