--- a/_includes/static/block-summit-main.html
+++ b/_includes/static/block-summit-main.html
@@ -50,7 +50,7 @@
           <div class="plyr__video-embed" id="player">
             <iframe
               class="lazy"
-              src="{{ page.intro_video_link }}"
+              src="https://player.vimeo.com/video/{{ page.intro_video_id }}?background=1&title=0&byline=0&portrait=0&autoplay=1&muted=1"
               frameborder="0"
               webkitallowfullscreen
               mozallowfullscreen
