adjusted summit hero section to comply with branding

--- a/_includes/static/block-summit-main.html
+++ b/_includes/static/block-summit-main.html
@@ -86,17 +86,19 @@
           />
         </div>
       </div>
-      <div class="row align-items-center my-5 pb-5 text-white">
-        <div class="col">
-          <p class="text-center" data-aos="fade-in"
-          data-aos-easing="apple-easing">jointly presented by</p>
-          <img
-            src="/uploads/global/wms2021/wunder-wef.svg"
-            alt=""
-            class="d-block mx-auto"
-            data-aos="fade-in"
-            data-aos-easing="apple-easing"
-          />
+      <div class="row align-items-end my-5 py-5 text-white">
+        <div class="col-7">
+          <p class="headline-medium my-0">
+            <span class="mr-2">October 11</span> 
+            <svg xmlns="http://www.w3.org/2000/svg" width="84" height="16" viewBox="0 0 84 16" fill="none">
+              <path d="M1 7C0.447715 7 -4.82823e-08 7.44772 0 8C4.82823e-08 8.55228 0.447715 9 1 9L1 7ZM83.7071 8.7071C84.0976 8.31658 84.0976 7.68341 83.7071 7.29289L77.3431 0.928926C76.9526 0.538401 76.3195 0.538401 75.9289 0.928926C75.5384 1.31945 75.5384 1.95261 75.9289 2.34314L81.5858 7.99999L75.9289 13.6568C75.5384 14.0474 75.5384 14.6805 75.9289 15.0711C76.3195 15.4616 76.9526 15.4616 77.3431 15.0711L83.7071 8.7071ZM1 9L83 8.99999L83 6.99999L1 7L1 9Z" fill="white"/>
+              </svg>
+            12
+          </p>
+          <p class="headline-small mb-0">Hamburg, Germany</p>
+        </div>
+        <div class="col-5">
+          <p class="headline-small  text-right my-0">in Partnership with <br>World Economic Forum</p>
         </div>
       </div>
       <div class="row pt-5 mt-5 text-white">
