--- a/_includes/block-contact-form.html
+++ b/_includes/block-contact-form.html
@@ -49,8 +49,8 @@
                     <div class="bottom-border"></div>
                   </div>
                   <div class="form-group">
-                    <label class="form-label" for="phone">Phone (incl. country code)</label>
-                    <input type="text" name="phone" id="phone" pattern="\+?[\d\s\)\(-]{8,15}" title="Must be between 8-15 characters long. Accepted characters +0-9()-">
+                    <label class="form-label" for="phone">Phone (incl. country code) {% if page.url == '/fleet' %} * {% endif %}</label>
+                    <input type="text" name="phone" id="phone" pattern="\+?[\d\s\)\(-]{8,15}" title="Must be between 8-15 characters long. Accepted characters +0-9()-" {% if page.url == '/fleet' %} required {% endif %}>
                     <div class="bottom-border"></div>
                   </div>
                 {% else %}
