updated german fleet page copy

--- a/_includes/static/de/block-fleet-main.html
+++ b/_includes/static/de/block-fleet-main.html
@@ -58,7 +58,7 @@
         <div class="col-md-6">
           <div data-aos="soft-up" data-aos-easing="apple-easing">
             <p>Benutzer App</p>
-            <h2 class="headline-large">Die perfekte App für deine Nutzer - und für Sie</h2>
+            <h2 class="headline-large">Die perfekte App für Sie und Ihre Nutzer</h2>
           </div>
           <div class="icon-text-list management">
             <p class="icon-text pr-lg-2 pr-xl-5" data-aos="fade-in" data-aos-easing="apple-easing" data-aos-anchor=".icon-text-list.management" data-aos-delay="100">
@@ -192,7 +192,7 @@
           <div data-aos="soft-up" data-aos-easing="apple-easing">
             <p>Antrieb für Ihre individuelle Mobilitätslösung</p>
             <h2 class="headline-large">Wir stellen vor: Wunder Marketplace</h2>
-            <p>GetSeien Sie der Konkurrenz einen Schritt voraus mit dem Wunder Marketplace - dem weltweit ersten Mobilitätsmarktplatz, der mit unserer stabilen und skalierbaren Mobilitätsplattform verbunden ist. Entdecken Sie Apps und Erweiterungen von Zoba, Asana, StriveCloud, Adjust und mehr.</p>
+            <p>Seien Sie der Konkurrenz einen Schritt voraus mit dem Wunder Marketplace - dem weltweit ersten Mobilitätsmarktplatz, der mit unserer stabilen und skalierbaren Mobilitätsplattform verbunden ist. Entdecken Sie Apps und Erweiterungen von Zoba, Asana, StriveCloud, Adjust und mehr.</p>
             <a class="btn btn-outline-dark mt-3" href="/marketplace">Erfahren Sie mehr</a>
           </div>
         </div>
