updated permalinks for rest of the duplicated pages

--- a/_includes/static/block-aboutus-main.html
+++ b/_includes/static/block-aboutus-main.html
@@ -135,10 +135,23 @@
             </div>
           </div>
           <div
-            class="col-10 offset-1 col-md-6 offset-md-0 col-lg-5 offset-lg-1 offset-xl-1 align-self-md-center align-self-lg-start"
+            class="
+              col-10
+              offset-1
+              col-md-6
+              offset-md-0
+              col-lg-5
+              offset-lg-1 offset-xl-1
+              align-self-md-center align-self-lg-start
+            "
           >
             <div
-              class="timeline__image-content d-flex flex-column align-items-start"
+              class="
+                timeline__image-content
+                d-flex
+                flex-column
+                align-items-start
+              "
             >
               <img
                 class="timeline__main-image rellax"
@@ -202,10 +215,23 @@
             </div>
           </div>
           <div
-            class="col-10 offset-1 col-md-6 offset-md-0 col-lg-5 offset-lg-1 offset-xl-1 align-self-md-center align-self-lg-start"
+            class="
+              col-10
+              offset-1
+              col-md-6
+              offset-md-0
+              col-lg-5
+              offset-lg-1 offset-xl-1
+              align-self-md-center align-self-lg-start
+            "
           >
             <div
-              class="timeline__image-content d-flex flex-column align-items-start"
+              class="
+                timeline__image-content
+                d-flex
+                flex-column
+                align-items-start
+              "
             >
               <img
                 class="timeline__main-image rellax"
@@ -282,10 +308,23 @@
             </div>
           </div>
           <div
-            class="col-10 offset-1 col-md-6 offset-md-0 col-lg-5 offset-lg-1 offset-xl-1 align-self-md-center align-self-lg-start"
+            class="
+              col-10
+              offset-1
+              col-md-6
+              offset-md-0
+              col-lg-5
+              offset-lg-1 offset-xl-1
+              align-self-md-center align-self-lg-start
+            "
           >
             <div
-              class="timeline__image-content d-flex flex-column align-items-start"
+              class="
+                timeline__image-content
+                d-flex
+                flex-column
+                align-items-start
+              "
             >
               <img
                 class="timeline__main-image rellax"
@@ -343,10 +382,23 @@
             </div>
           </div>
           <div
-            class="col-10 offset-1 col-md-6 offset-md-0 col-lg-5 offset-lg-1 offset-xl-1 align-self-md-center align-self-lg-start"
+            class="
+              col-10
+              offset-1
+              col-md-6
+              offset-md-0
+              col-lg-5
+              offset-lg-1 offset-xl-1
+              align-self-md-center align-self-lg-start
+            "
           >
             <div
-              class="timeline__image-content d-flex flex-column align-items-start"
+              class="
+                timeline__image-content
+                d-flex
+                flex-column
+                align-items-start
+              "
             >
               <img
                 class="timeline__main-image mw-100 rellax"
@@ -373,7 +425,7 @@
       Join the ride
     </h3>
     <a
-      href="/careers"
+      href="/careers/"
       class="btn btn-outline-primary mb-5"
       data-aos="fade-in"
       data-aos-easing="apple-easing"
