--- a/_includes/static/de/block-aboutus-main.html
+++ b/_includes/static/de/block-aboutus-main.html
@@ -427,7 +427,7 @@
       Kommen Sie an Bord
     </h3>
     <a
-      href="/careers"
+      href="/careers/"
       class="btn btn-outline-primary mb-5"
       data-aos="fade-in"
       data-aos-easing="apple-easing"
