--- a/_includes/static/de/block-home-main.html
+++ b/_includes/static/de/block-home-main.html
@@ -99,7 +99,13 @@
     <div class="container-fluid">
       <div
         id="showcase-vehicles"
-        class="showcase-box__bg grey-gradient-bg text-left d-flex justify-content-start justify-content-md-center"
+        class="
+          showcase-box__bg
+          grey-gradient-bg
+          text-left
+          d-flex
+          justify-content-start justify-content-md-center
+        "
       >
         <div class="row">
           <div class="offset-md-1 col-md-6 col-lg-5">
@@ -166,7 +172,13 @@
           </h2>
         </div>
         <div
-          class="col-md-6 col-lg-4 pl-xl-4 mb-5 mb-md-0 text-align-center order-3 order-md-2"
+          class="
+            col-md-6 col-lg-4
+            pl-xl-4
+            mb-5 mb-md-0
+            text-align-center
+            order-3 order-md-2
+          "
         >
           <img
             data-src="/uploads/global/home/marketplace-mockup-hp.jpg"
@@ -311,7 +323,7 @@
         <p>
           Entdecken Sie unsere Technologie, Produkte und Kultur in unserem Blog.
         </p>
-        <a class="btn btn-outline-dark mt-4" href="/blog">Erfahren Sie mehr</a>
+        <a class="btn btn-outline-dark mt-4" href="/blog/">Erfahren Sie mehr</a>
       </div>
     </div>
     <div class="mob-scroll">
@@ -390,7 +402,13 @@
         </div>
       </div>
       <ol
-        class="carousel-indicators flat-indicators scroller-indicators position-static mx-0"
+        class="
+          carousel-indicators
+          flat-indicators
+          scroller-indicators
+          position-static
+          mx-0
+        "
       >
         <li class="bg-dark"></li>
         <li class="bg-dark active"></li>
