--- a/_layouts/simple-article.html
+++ b/_layouts/simple-article.html
@@ -9,7 +9,7 @@
             <div class="col-sm-8 offset-sm-2">
               <div class="row article-header__content align-items-center">
                 <div class="col-8 pl-0">
-                  <a class="w-arrow" href="/blog" ><h3 class="mb-0">Wunder Blog</h3></a>
+                  <a class="w-arrow" href="/blog/" ><h3 class="mb-0">Wunder Blog</h3></a>
                 </div>
                 <div class="col-4 pr-0">
                   <div class="share-block">
@@ -80,7 +80,7 @@
             <div class="col-sm-8 offset-sm-2">
               <div class="row article-header__content align-items-center">
                 <div class="col-8 pl-0">
-                 <a href="/blog" ><h3 class="mb-0"><img class="back-arrow" src="/uploads/global/arrow-right-dark.svg" /> Wunder Blog</h3></a>
+                 <a href="/blog/" ><h3 class="mb-0"><img class="back-arrow" src="/uploads/global/arrow-right-dark.svg" /> Wunder Blog</h3></a>
                 </div>
                 <div class="col-4 pr-0">
                   <div class="share-block">
